@@ -101,7 +101,7 @@ sub parse_configItem {
 		$description = parse_text $arg;
 	    }
 	} elsif ($tag =~ /^(shortDescription|_description
-                           |vendor|languageList)$/x) {
+                           |vendor|languageList|countryList)$/x) {
 	} elsif ($tag eq 0) {
 	    warning "configItem: Garbage in configItem: $arg.\n" if ($arg !~ /^\s*$/);
 	} else {
